# FHE-S4

./: .gitignore  CHEBYSHEV_STAGE_DEBUG_FIX_README.md  CMakeLists.txt  EvalChebyshevSeries_demo.cpp  GeLUPoly FHERMA.cpp  PARSING_FIX_README.md  README_EvalChebyshevSeries.md  README_approx_backbone.md  README_ckks_context_openfhe.md  README_run_inference_fhe_shell_new.md  activation_range_diagnostic.py  adding_problem.py  depth_issue)_fix_README.md  eval_approx_backbone.py  eval_glu_approxes.py  eval_glu_swap.py  export_for_openfhe_new.py  openfhe_dense_toeplitz_baseline.cpp  openfhe_rotate_sum_protocol.cpp  openfhe_s4.cpp  requirements.txt  retrain_gelu_modes.py  retrain_glu_modes.py  toeplitz_test_data.json  train_mini_s4d.py
approx_backbone/: README.md  __init__.py  eval_backbone.py  model.py
approx_backbone/checkpoints/: s4d_best_exact.pt  s4d_best_gelu_exact_glu_linear_gate.pt  s4d_best_gelu_poly4_glu_linear_gate.pt  s4d_best_gelu_poly6_glu_linear_gate.pt  s4d_best_linear_gate.pt  s4d_best_poly4_gate.pt  s4d_best_poly6_gate.pt
s4d/: model.py
scripts/: run_inference_plain.py  setup_python_venv.sh
